0.0.14  (3 July 2005)
- Added action menu (moved trading to action menu)
- Added support for map properties (to be used for music and minimap settings)
- Added background image to minimap
- Fixed window resizing (applies to inventory window)

0.0.13  (5 June 2005)
- Added ability to trade items and money
- Added server field to login dialog
- Added item descriptions to inventory and buy/sell dialogs
- Added confirmation dialog before quitting
- Added button to show/hide equipment window
- Added framerate limiter to config options
- Added ability to auto attack
- Added in-game help window
- Added new hair style (mohawk)
- Upgraded to Guichan 0.4.0
- Dialogs are now modal when appropriate
- Maximum item icon size changed to 32x32
- Fixed a crash in OpenGL mode
- Fixed rendering of minimap, progress bars and player sprite in OpenGL mode
- Fixed 100% CPU usage when minimized
- Fixed players not always appearing to sit when they are in fact sitting

0.0.12  (1 May 2005)
- Added new map (a cave), tiles, monsters and items
- Added volume sliders in setup window
- Added attack and level up samples
- Added icon to application window
- Added player names below players
- Added register button in login screen
- Added warning message to use at least 4 characters as user name
- Added scrollbar and command history to chat window
- Added proper support for installation of the game on *nix systems
- Improved skin on scrollbars, arrows and slider
- Improved sound engine and added fade in and out option for music
- Now you can use right mouse button to attack (enables also ranged attacks)
- Sound samples are now loaded through resource manager
- Item information is now stored in an XML file
- Monstersets are now loaded dynamically
- Fixed crash when map server is down
- Fixed NPC lists not to show garbage
- Fixed attack animation to be synced with attack speed
- Fixed speech and emoticons position
- Fixed speech, damage and emoticon display to be framerate independent